cmake_minimum_required (VERSION 3.0.0)
project(abxhttpd)
set(CMAKE_CXX_STANDARD 11)
include_directories(.)

find_package(Threads REQUIRED)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
set(THREADS_PREFER_PTHREAD_FLAG ON)
set(ABXHTTPD_LIB "${CMAKE_THREAD_LIBS_INIT}")
if(CMAKE_HOST_WIN32)
	link_libraries(ws2_32)
endif()

aux_source_directory(Httpd SOURCE_FILES)
aux_source_directory(Parser SOURCE_FILES)
add_executable(abxhttpd CLI.cpp ${SOURCE_FILES})

if(DEFINED ENV{ABXHTTPD_SSL})
	add_definitions(-DABXHTTPD_SSL)
	set(OPENSSL_USE_STATIC_LIBS TRUE)
	find_package(OpenSSL REQUIRED)
	list(APPEND ABXHTTPD_LIB OpenSSL::SSL)
endif()

target_link_libraries(abxhttpd ${ABXHTTPD_LIB})
